# mcp-elicitation

./: LICENSE  README.md  client.py  pyproject.toml  server.py
